--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Robson Orleans",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
